--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Renthereum workshop smart contracts",
   "main": "truffle.js",
   "scripts": {
-    "test": "sh scripts/test.sh",
+    "test": "scripts/test.sh",
+    "test.win": "sh scripts/test.sh",
     "compile": "truffle compile",
     "migrate": "truffle migrate --network custom",
     "migrate.hard": "truffle migrate --network custom --reset"
