start a testrpc connection

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "scripts/test.sh",
     "test.win": "sh scripts/test.sh",
+    "testrpc": "scripts/start_testrpc.sh",
+    "testrpc.win": "sh scripts/start_testrpc.sh",
     "compile": "truffle compile",
     "migrate": "truffle migrate --network custom",
     "migrate.hard": "truffle migrate --network custom --reset"
