--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Renthereum workshop smart contracts",
   "main": "truffle.js",
   "scripts": {
-    "test": "scripts/test.sh",
+    "test": "fuser -k 8545/tcp & scripts/test.sh",
     "test.win": "sh scripts/test.sh",
     "testrpc": "scripts/start_testrpc.sh",
     "testrpc.win": "sh scripts/start_testrpc.sh",
