--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test": "fuser -k 8545/tcp & scripts/test.sh",
     "test.win": "sh scripts/test.sh",
-    "testrpc": "scripts/start_testrpc.sh",
-    "testrpc.win": "sh scripts/start_testrpc.sh",
+    "start": "fuser -k 8545/tcp & scripts/start_testrpc.sh",
+    "start.win": "sh scripts/start_testrpc.sh",
     "compile": "truffle compile",
-    "migrate": "truffle migrate --network custom",
-    "migrate.hard": "truffle migrate --network custom --reset"
+    "migrate": "truffle migrate --network test",
+    "console": "truffle console --network test",
+    "migrate.hard": "truffle migrate --network test --reset"
   },
   "dependencies": {
     "bip39": "^2.4.0",
